samples/_failures_safe/1761428463_2e2240_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4aac9d68.c: In function ‘main’:
./samples/SAFE/__tmp_4aac9d68.c:168:5: error: expected declaration or statement at end of input
  168 |     printf("\nFirst matrix:\n");
      |     ^~~~~~
